--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,6 +1,20 @@
 .btn-main {
-  border: 1px solid black;
-  border-radius: 30px;
+  border: 1px solid $gray;
+  border-radius: 2px;
   margin: 1rem 0;
   font-size: 12px;
+  &:hover{
+    background-color: $green;
+  }
+}
+
+.btn-nav {
+  border: 1px solid $gray;
+  background-color: $green;
+  border-radius: 2px;
+  margin: 1rem 0;
+  font-size: 12px;
+  &:hover{
+    background-color: $white;
+  }
 }
