--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,16 @@
-.navbar-lewagon {
+.navbar-mymedium {
   justify-content: space-between;
   background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-mymedium .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar-mymedium .navbar-brand img {
+  width: 120px;
+}
+
+.nav-item .btn-nav {
+  margin-right: 1rem;
 }
