article show without actions

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,3 +1,16 @@
+.card-comment {
+  background: white;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  padding: 2rem;
+  margin-bottom: 1rem;
+
+  .comment-infos {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
 .card-article {
   overflow: hidden;
   height: 220px;
