--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,18 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
 <div class="container">
-  <div class="articles">
-    <% @articles.each do |article| %>
-      <div class="card-article">
-        <div class="card-article-infos">
-          <p class="card-article-author">Written by <%= article.user.email %></p>
-          <h2><%= article.title %></h2>
-          <p><%= article.short_description %></p>
-          <%= link_to "lire l'article", article_path(article), class: "btn btn-main" %>
-        </div>
-        <%= cl_image_tag article.photo.key %>
+  <div class="article-list-container">
+    <h1>Voici les derniers articles</h1>
+      <div class="articles">
+        <% @articles.each do |article| %>
+          <div class="card-article">
+            <div class="card-article-infos">
+              <p class="card-article-author">Posté par<%= article.user.email %></p>
+              <h2><%= article.title %></h2>
+              <p><%= article.short_description %></p>
+              <%= link_to "lire l'article", article_path(article), class: "btn btn-main" %>
+            </div>
+            <%= cl_image_tag article.photo.key %>
+          </div>
+        <% end %>
       </div>
-    <% end %>
-  </div>
   </div>
 </div>
