--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "Créer un nouvel article", "#", class: "btn btn-nav" %>
+          <%= link_to "Créer un nouvel article", new_article_path, class: "btn btn-nav" %>
         </li>
         <li class="nav-item">
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-main" %>
