--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -18,6 +18,7 @@
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .card-article img {
