--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,9 @@
         <li class="nav-item active">
           <%= link_to "Créer un nouvel article", new_article_path, class: "btn btn-nav" %>
         </li>
+        <li class="nav-item active">
+          <%= link_to "Voir mes articles", my_articles_path, class: "btn btn-nav" %>
+        </li>
         <li class="nav-item">
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-main" %>
         </li>
